--- a/Bookworm/package.json
+++ b/Bookworm/package.json
@@ -23,6 +23,7 @@
     "firebase": "^4.12.1",
     "react": "16.3.0-alpha.1",
     "react-native": "^0.54.4",
+    "react-native-aws3": "0.0.8",
     "react-navigation": "^1.5.11",
     "react-redux": "^5.0.7",
     "redux": "^3.7.2",
